--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         <activity android:name=".AddActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
 
+        <activity android:name=".AppActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
             />
     </application>
 
