--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="mx.ivajotha.myapps">
 
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -22,7 +24,7 @@
         <activity android:name=".AppActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
 
-            />
+        <service android:name=".services.ServiceUpdate"></service>
     </application>
 
 </manifest>
